CSL-002 - Added text filed for outlined and normal

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
 
     <hr class="mt-4 mb-4">
 
+    <input type="text" id="fname" name="fname" class="text-field-secondary">
+    <input type="text" id="fname" name="fname" class="text-field-outlined-black">
+    <input type="text" id="fname" name="fname" class="text-field-complement-info">
+
+    
+    <hr class="mt-4 mb-4">
+
+
     <!-- cards -->
     <h2 class="mb-2">Cards</h2>
     <div class="card">
